# ai-knowledge-graph

./: .gitignore  CLAUDE.md  DEVELOPMENT_PLAN.md  README.md  RESEARCH_REPORT.md  _check.py  _check_gaps.py  _merge_queues.py  _retry_errors.py  _scorer_output.txt  _tmp_chk.py  _tmp_count.py  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
apps/api/: .env.example  config.py  main.py  pyproject.toml  rate_limiter.py
apps/api/db/: neo4j_client.py  redis_client.py  sqlite_client.py
apps/api/llm/: cache.py  router.py
apps/api/routers/: analytics.py  analytics_advanced.py  analytics_experience.py  analytics_forecast.py  analytics_insights.py  analytics_planning.py  analytics_profile.py  analytics_search.py  analytics_social.py  analytics_utils.py  community.py  community_content.py  community_discussions.py  dialogue.py  graph.py  graph_advanced.py  graph_topology.py  health.py  learning.py  learning_extended.py  learning_intelligence.py  learning_review.py  notes.py  notifications.py  onboarding.py
apps/api/tests/: test_achievements.py  test_adaptive_learning.py  test_analytics.py  test_analytics_utils.py  test_analytics_v2.py  test_analytics_v25.py  test_analytics_v26.py  test_analytics_v27.py  test_analytics_v28.py  test_analytics_v29.py  test_bkt.py  test_community.py  test_community_moderation.py  test_concept_clusters.py  test_config.py  test_content_feedback.py  test_cr_fixes_r1.py  test_cross_domain_bridge.py  test_dependency_tree.py  test_dialogue_api.py  test_evaluator.py  test_fsrs.py  test_health.py  (+50 more)
(+7673 files in other folders)
